# camel

./: .devcontainer.json  .gitignore  Dockerfile  LICENSE  README.md  test.cml
.github/workflows/: build-action.yaml  test-action.yaml
Caby/: CMakeLists.txt  README.md
Caby/src/: ast.c  ast.h  bytecode.c  bytecode.h  class.c  class.h  common.c  common.h  compiler.c  compiler.h  dissasembler.c  dissasembler.h  error.c  error.h  gc.c  gc.h  hashtable.c  hashtable.h  lexer.c  lexer.h  main.c  memory.c  memory.h  native.c  native.h  object.c  object.h  parser.c  parser.h  serializer.c  serializer.h  vm.c  vm.h
Caby/src/memory/: arena_alloc.c  arena_alloc.h  block_alloc.c  block_alloc.h
Caby/tests/: blockalloc_test.c  compiler_test.c  galloc_test.c  hashmap_test.c  lexer_test.c  parser_test.c  test.h
Cacom/: Cargo.toml  a.out  out.txt
Cacom/src/: ast.rs  bytecode.rs  compiler.rs  grammar.lalrpop  main.rs  objects.rs  serializable.rs  utils.rs
Cacom/src/tests/: mod.rs  parser.rs
Examples/: arith.cml  string_concat.cml
scripts/: build.sh  run.sh  test.sh
tests/: arith.cml  block_ret.cml  bst.cml  function01.cml  functions.cml  functions01.cml  functions02.cml  functions03.cml  functions04.cml  gcd.cml  globals.cml  if.cml  locals.cml  native_funs01.cml  objects1.cml  objects2.cml  objects3.cml  operators01.cml  run_tests.sh  test.cml
tests/expected/: arith.exp  block_ret.exp  bst.exp  gcd.exp  if.exp  locals.exp  native_funs01.exp  objects2.exp  objects3.exp  operators01.exp  string_concat.exp
tests/wrong_inputs/: print_args.cml  type_op1.cml  wrong_call.cml
tests/wrong_inputs/expected/: print_args.ref  type_op1.ref  wrong_call.exp
