[package]
name = "cacom"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = {version = "0.19.7", features = ["lexer"] }
regex = "1"
clap = { version = "3.2.7", features = ["derive"]}

[build-dependencies]
lalrpop = "0.19.7"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
